# Homemade_AI_Agent_Centaur_Psicode

./: .gitignore  Agent_struct.md  INSTALL_GUIDE.md  Makefile  README.md  STATE_OWNERSHIP.md  install.sh  ipc_schema-agentB.json  ipc_schema.json  tsconfig.json
agent-brain/: pyproject.toml
agent-brain/agent_brain/: __init__.py  _compat.py  advisor.py  attachments.py  auto_dream.py  crewai_service.py  dream.py  ipc_server.py  ipc_types.py  ipc_wire.py  magic_docs.py  output_styles.py  rate_limits.py  suggestions.py  summary.py  tips.py  vcr.py  wiki.py
agent-brain/agent_brain/analytics/: __init__.py  datadog.py  diagnostics.py  first_party_logger.py  growthbook.py  metadata.py  sink.py
agent-brain/agent_brain/api/: __init__.py  client.py  errors.py  files.py  media_tools.py  streaming.py
agent-brain/agent_brain/commands/: __init__.py  base.py  commit.py  init.py  insights.py  review.py  security_review.py  ultraplan.py
agent-brain/agent_brain/compact/: __init__.py  auto.py  micro.py  service.py  session_memory_compact.py  snip.py
agent-brain/agent_brain/crews/: code_review.yaml  research_report.yaml
agent-brain/agent_brain/memory/: __init__.py  chunker.py  extract.py  graph.py  knowledge_graph.py  layers.py  memdir.py  normalize.py  search.py  session.py  team_sync.py  vector_store.py
agent-brain/agent_brain/models/: __init__.py  catalog.py  selector.py
agent-brain/agent_brain/plugins/: __init__.py  builtin_manifest.json  loader.py
agent-brain/agent_brain/prompts/: commit.j2  compact.j2  memory.j2  review.j2  system.j2
agent-brain/agent_brain/skills/: __init__.py  executor.py  loader.py
agent-brain/agent_brain/skills/bundled/: batch.yaml  claudeApi.yaml  claudeInChrome.yaml  commit.yaml  crewai.yaml  debug.yaml  keybindings.yaml  loop.yaml  loremIpsum.yaml  remember.yaml  review.yaml  (+10 more)
agent-brain/agent_brain/types/: __init__.py  analytics.py  auth.py  base.py  google.py
agent-brain/agent_brain/voice/: __init__.py  client.py  keyterms.py  stt_stream.py
agent-brain/tests/: test_advisor.py  test_analytics.py  test_attachments.py  test_client.py  test_commands.py  test_compact.py  test_crewai_service.py  test_ipc_server.py  test_memory_system.py  test_output_styles.py  test_plugins.py  test_selector.py  test_skills.py  test_streaming.py  test_suggestions.py  test_summary.py  test_support_services.py  test_voice.py
agent-core/: Cargo.toml
agent-core/src/: activity.rs  auth.rs  bootstrap.rs  bridge_client.rs  cli.rs  config.rs  context.rs  cost_tracker.rs  file_history.rs  file_state_cache.rs  history.rs  ide_integration.rs  init.rs  ipc.rs  main.rs  mcp_client.rs  query_engine.rs  session_history.rs  session_storage.rs  updater.rs  util.rs
agent-core/src/bash_parser/: ast.rs  mod.rs  parser.rs  read_only.rs  security.rs
agent-core/src/commands/: mod.rs
agent-core/src/computer_use/: mod.rs
agent-core/src/coordinator/: mod.rs
agent-core/src/dream/: config.rs  lock.rs  mod.rs  prompt.rs  task.rs
agent-core/src/git/: mod.rs
agent-core/src/input/: mod.rs
agent-core/src/keybindings/: context.rs  defaults.rs  format.rs  loader.rs  matcher.rs  mod.rs  parser.rs  reserved.rs  resolver.rs  schema.rs
agent-core/src/migrations/: mod.rs
agent-core/src/model/: mod.rs
agent-core/src/permissions/: dangerous_patterns.rs  denial_tracking.rs  explainer.rs  gate.rs  loader.rs  mod.rs  mode.rs  rule_parser.rs  rules.rs  shadowed.rs
agent-core/src/proxy/: mod.rs
agent-core/src/query/: abort.rs  compact.rs  memory_integration.rs  message.rs  mod.rs  prompt_cache.rs  query_loop.rs  retry.rs  stop_hooks.rs  token_budget.rs  tool_result_budget.rs  tool_summary.rs
agent-core/src/remote/: manager.rs  mod.rs  permission_bridge.rs  websocket.rs
agent-core/src/sandbox/: mod.rs
agent-core/src/schemas/: hooks.rs  mod.rs
agent-core/src/server/: mod.rs
agent-core/src/settings/: mdm.rs  mod.rs  validation.rs
agent-core/src/shell/: mod.rs
agent-core/src/state/: mod.rs
agent-core/src/swarm/: mod.rs
agent-core/src/tasks/: mod.rs  runner.rs  scheduler.rs  types.rs  watcher.rs
agent-core/src/telemetry/: events.rs  metrics_exporter.rs  mod.rs  perfetto.rs  session_tracing.rs
agent-core/src/tools/: agent.rs  ask_user.rs  bash.rs  brief.rs  config_tool.rs  crewai_tool.rs  cron_create.rs  cron_schedule.rs  execution.rs  file_edit.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  hooks.rs  lsp_tool.rs  mcp_auth_tool.rs  mcp_list_resources.rs  mcp_read_resource.rs  mcp_tool.rs  memory_recall.rs  mod.rs  notebook_edit_tool.rs  orchestration.rs  plan_mode_enter.rs  plan_mode_exit.rs  powershell.rs  remote_trigger.rs  repl.rs  send_message.rs  skill_tool.rs  sleep.rs  streaming_executor.rs  synthetic_output.rs  task_create.rs  task_get.rs  task_list.rs  task_output.rs  task_stop.rs  task_update.rs  (+10 more)
agent-core/src/tui/: buddy.rs  events.rs  input_handler.rs  layout.rs  markdown.rs  mod.rs  renderer.rs  theme.rs
agent-core/src/vim/: mod.rs  motions.rs  operators.rs  text_objects.rs  transitions.rs  types.rs
(+110 files in other folders)
