[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "centaur-agent-brain"
version = "0.1.0"
description = "Python intelligence layer scaffold for the Centaur Psicode AI agent."
requires-python = ">=3.10"
dependencies = [
  "anthropic>=0.40.0",
  "httpx>=0.27",
  "pydantic>=2.0",
  "jinja2>=3.0",
  "PyYAML>=6.0",
  "aiofiles>=24.0",
  "watchfiles>=0.24",
  "opentelemetry-sdk>=1.27",
  "tiktoken>=0.7",
  "msgpack>=1.1",
  "rich>=13.0",
  "sounddevice>=0.4",
  "numpy>=1.26",
  "websockets>=12.0"
]

[project.optional-dependencies]
vector = ["chromadb>=0.5.0,<0.7"]

[tool.hatch.build.targets.wheel]
packages = ["agent_brain"]
